Added Javadoc comments to classes and methods