@@ -1,5 +1,9 @@
 import java.util.ArrayList;
-
+/**
+ * This class represents a protected Message Box which is shared between threads
+ * and stores data that can be retrieved.
+ * @author Mahnoor Fatima
+ */
 public class MessageBox {
     private ArrayList<Message> messages;
 
@@ -34,16 +38,24 @@ public class MessageBox {
             }
         }
         //remove oldest message in the box
-        Message msg = messages.removeFirst();
+        Message msg = messages.remove(0);
 //        System.out.println(Thread.currentThread().getName() + " received message: " +msg);
         notifyAll();
         return msg;
     }
 
+    /**
+     * Returns true if the box is empty, false if there are messages.
+     * @return true if the box is empty
+     */
     public boolean empty(){
         return messages.isEmpty();
     }
 
+    /**
+     * Returns the number of objects in the box
+     * @return number of objects in the box.
+     */
     public int getSize(){
         return messages.size();
     }
